Alignment fix for title page

--- a/src/drafting/styles.scss
+++ b/src/drafting/styles.scss
@@ -100,6 +100,7 @@
             
             strong {
               font-weight: 700;
+              text-align: center;
             }
           }
           hr {
